--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>project</title>
+    <script src="https://fast.wistia.com/player.js" async></script>
+    <script src="https://fast.wistia.com/embed/1jlfbxam90.js" async type="module"></script>
+    <style>wistia-player[media-id='1jlfbxam90']:not(:defined) { background: center / contain no-repeat url('https://fast.wistia.com/embed/medias/1jlfbxam90/swatch'); display: block; filter: blur(5px); padding-top:56.25%; }</style>
   </head>
   <body>
     <div id="root"></div>
